Streamline JavaFX variant handling